.....fix respon mobile hero

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ header,
   body,
   header,
   .view {
-    height: 630px;
+    height: 170px;
   }
 }
 @media (min-width: 800px) and (max-width: 850px) {
